Add Entities and DbContext

--- a/src/Shared/OrderingSystem.Shared.Domain/OrderingSystem.Shared.Domain.csproj
+++ b/src/Shared/OrderingSystem.Shared.Domain/OrderingSystem.Shared.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderingSystem.Shared.Common\OrderingSystem.Shared.Common.csproj" />
+  </ItemGroup>
+
 </Project>
