--- a/src/OrderingSystem.OrderProcessingService/OrderingSystem.OrderProcessingService.csproj
+++ b/src/OrderingSystem.OrderProcessingService/OrderingSystem.OrderProcessingService.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Shared\OrderingSystem.Shared.Infrastructure\OrderingSystem.Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\Shared\OrderingSystem.Shared.Services\OrderingSystem.Shared.Services.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
