--- a/src/Shared/OrderingSystem.Shared.Infrastructure/OrderingSystem.Shared.Infrastructure.csproj
+++ b/src/Shared/OrderingSystem.Shared.Infrastructure/OrderingSystem.Shared.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
