--- a/src/Shared/OrderingSystem.Shared.Services/OrderingSystem.Shared.Services.csproj
+++ b/src/Shared/OrderingSystem.Shared.Services/OrderingSystem.Shared.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderingSystem.Shared.Infrastructure\OrderingSystem.Shared.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
