--- a/src/OrderingSystem.ProductSyncer/appsettings.json
+++ b/src/OrderingSystem.ProductSyncer/appsettings.json
@@ -1,8 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "SyncSchedule": "0 0 * * *", // Cron for daily sync at midnight
+    "RabbitMQSettings": {
+        "HostName": "localhost",
+        "UserName": "guest",
+        "Password": "guest",
+        "Exchange": "sync-exchange",
+        "RoutingKey": "sync-routing-key"
     }
-  }
 }
